--- a/src/main/resources/templates/score/score.html
+++ b/src/main/resources/templates/score/score.html
@@ -45,7 +45,7 @@
         <div class="center-title"th:replace="centerTitle :: div"></div>
     </div>
     <div class="container-fluid pt-4 px-4">
-        <div class="g-4" style="display: flex; justify-content: center;">
+        <div class="g-4">
             <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">
                 <div class="bg-secondary rounded p-4" style="height: auto; width: 1000px;">
                     <div style="display: flex; height: 30.55px;" class="mb-2">
@@ -62,6 +62,11 @@
                     <div id="chartContainer" style="margin-bottom: 5%;" >
                         <canvas id="rank-chart"></canvas>
                     </div>
+
+                </div>
+            </div>
+            <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">
+                <div class="bg-secondary rounded p-4" style="height: auto; width: 1680px;">
                     <div id="scoreContainer" >
                         <table id="scoreTable" class="scoreTable">
                             <thead class="rank-title">
@@ -74,8 +79,9 @@
                             </tr>
                             </thead>
                         </table>
-                    </div>
+
                 </div>
+                    </div>
             </div>
         </div>
     </div>
