--- a/src/main/resources/templates/admin/layout/admin_nav.html
+++ b/src/main/resources/templates/admin/layout/admin_nav.html
@@ -9,11 +9,16 @@
   </a>
   <div class="navbar-nav align-items-center ms-auto">
     <div class="nav-item">
-      <a href="/mypage" class="nav-link">
+      <a href="/" class="nav-link">
+        <i class="fa-solid fa-house me-lg-2"></i>
+        <span class="d-none d-lg-inline-flex">Home</span>
+      </a>
+    </div>
+    <div class="nav-item">
+      <a href="/myPage/profile" class="nav-link">
         <i class="fa-solid fa-user me-lg-2"></i>
         <span class="d-none d-lg-inline-flex">Mypage</span>
       </a>
-
     </div>
     <div class="nav-item">
       <a href="/logout" class="nav-link">
