--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -3,7 +3,7 @@
 <nav style="width: 1680px;" class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
     <div class="main-logo">
         <a href="/">
-            <img style="height: 5.3vh; margin: 8px 0 8px 0;" src="/images/logo/secu_logo.PNG" alt="logo">
+            <img style="height: 4.5vh; margin: 8px 8px 8px 0;" src="/images/logo/secu_ctf_logo.png" alt="logo">
         </a>
     </div>
     <div class="navbar-nav" style="display: flex; justify-content: space-between; width: 100%;" >
