--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="nav-link main-link">
+                <a href="https://discord.gg/CbWevTJD" target="_blank" class="nav-link main-link">
                     <i class="fa-brands fa-discord me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Discord</span>
                 </a>
