--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -22,7 +22,7 @@
     <nav th:replace="~{/nav :: nav}"></nav>
 </div>
 <div class="layout-content-no-footer">
-    <div class="content-login container-fluid position-relative d-flex p-0">
+    <div class="content-login container-fluid position-relative d-flex p-0" style="width: 1680px;">
         <div class="container-fluid">
             <div class="row h-100 align-items-center justify-content-center" style="max-height: 867px;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
