--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -104,12 +104,20 @@
         margin-left: 15px;
     }
 }
-@media (min-width: 1280px){
+@media (max-width: 1280px){
     .navbar{
         width: 1280px;
     }
     .content-login {
         width: 1280px;
+    }
+}
+@media (max-width: 1680px){
+    .navbar{
+        width: 1680px;
+    }
+    .content-login {
+        width: 1680px;
     }
 }
 @media (min-width: 1680px){
