--- a/src/main/resources/templates/score/score.html
+++ b/src/main/resources/templates/score/score.html
@@ -62,11 +62,6 @@
                     <div id="chartContainer" style="margin-bottom: 5%;" >
                         <canvas id="rank-chart"></canvas>
                     </div>
-
-                </div>
-            </div>
-            <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">
-                <div class="bg-secondary rounded p-4" style="height: auto; width: 1680px;">
                     <div id="scoreContainer" >
                         <table id="scoreTable" class="scoreTable">
                             <thead class="rank-title">
@@ -80,9 +75,14 @@
                             </thead>
                         </table>
 
-                </div>
                     </div>
+                </div>
             </div>
+<!--            <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">-->
+<!--                <div class="bg-secondary rounded p-4" style="height: auto; width: 1680px;">-->
+<!--                    -->
+<!--                    </div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
