--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -50,6 +50,7 @@
                 <h3 style="font-size: 1.5em;" class="category-title">REVERSING</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${REVERSING}" th:data-quiz-id="${quiz.quizIdAsUuid}"
+                         th:styleappend="${quiz.isSolved}?'border:1px solid blue'"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
                         <div class="bottom-row">
