--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -109,7 +109,6 @@
     margin-bottom: 10px;
 }
 #popupTitle{
-    font-size : 4em;
     font-weight: bold;
     text-align: center;
 }
@@ -122,26 +121,18 @@
     padding-bottom : 0.5%;
     margin-top: 20px;
 
-    overflow: auto;
 }
 
 .popupBoxContent{
     margin-bottom: 5px;
     color : white;
     height : 8%;
-
     display: flex;
     align-items: center;
 }
 
 .flag-title{
 
-}
-.popupBoxContent.description  {
-    height : 45%;
-    overflow: auto;
-    display: block;
-    align-items: stretch;
 }
 
 .warning {
@@ -159,11 +150,6 @@
     margin-right: 2%;
 }
 
-.titleFlex{
-    display: flex;
-    align-items: center;
-    height : 8%;
-}
 .titleFlex .popupBoxContent{
     padding-left : 1%;
 }
@@ -216,11 +202,25 @@
 }
 .change-challenge-rank{
     border-color : transparent;color : white; padding-right: 2%; padding-left : 2%;
-    border-radius:20px;
 }
 
-label:hover, label:active, input:hover+label, input:active+label {
-    background-color: white;
-    color : black;
+
+.nameheightDiv{
+    height :15%;
+}
+.titleFlex{
+    display: flex;
+    align-items: center;
+    height : 10%;
 }
 
+
+.popupBoxContent.description  {
+    height : 55%;
+    display: block;
+    align-items: stretch;
+    margin-bottom: 3%;
+}
+.attatchmentDiv{
+    height : 5%
+}
