--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -118,7 +118,7 @@
 
 <!-- Popup window -->
 <div id="popup"
-     style="display:none;width:50%;height:60%;top:50%;left:50%;transform:translate(-50%, -50%);position:fixed;">
+     style="display:none;width:600px;height:60%;top:50%;left:50%;transform:translate(-50%, -50%);position:fixed;">
 </div>
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
