--- a/src/main/resources/templates/mypage/profile.html
+++ b/src/main/resources/templates/mypage/profile.html
@@ -23,7 +23,7 @@
 <div class="layout-content-no-footer" style="height: 100%;">
     <div class="content-login container-fluid position-relative d-flex p-0">
         <div class="container-fluid">
-            <div class="row h-100 align-items-center justify-content-center" style="height: 867px !important;">
+            <div class="row h-100 align-items-center justify-content-center" style="min-height: 867px !important;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4" style="width: 80%; height: 80%;">
                     <div class="bg-secondary rounded p-4 p-sm-5" style="height: 100%; min-height: 632px;" >
                         <div class="d-flex align-items-start" style="height: 100%;">
