--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<nav style="width: 1680px;" class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
+<nav  class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
     <div class="main-logo">
         <a href="/">
             <img style="height: 4.5vh; margin: 8px 8px 8px 0;" src="/images/logo/secu_ctf_logo.png" alt="logo">
