--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -23,7 +23,7 @@
 .content{
     flex-direction: column;
     align-items: center;
-    max-width: 1680px;
+    /*max-width: 1680px;*/
     /*position : fixed;*/
     margin: 0 auto;
     background: var(--dark);
@@ -122,10 +122,15 @@
 }
 @media (min-width: 1680px){
     .navbar{
-        width: 1680px;
+        width: 100%;
     }
     .content-login {
-        width: 1680px;
+        width: 100%;
+    }
+    #background-video {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 }
 
@@ -134,6 +139,7 @@
 .content-login {
     background-image: url("../images/login/ship1.jpg");
     background-repeat: no-repeat;
+    background-size:cover;
 }
 
 
@@ -150,7 +156,7 @@
 }
 
 .main-title{
-    font-size : 100px;
+    font-size : 70px;
     color : white;
     font-weight: bold;
     z-index: 1;
