--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -139,7 +139,7 @@
         font-size : 100px !important;
     }
 }
-@media (min-height : 450px){
+@media (max-height : 600px){
     .main-title{
         font-size : 30px !important;
     }
