--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -51,7 +51,7 @@
                             <span>소속</span>
                             <select class="form-control" id="affiliation" style="background: #000;">
                                 <option value="NONE" selected disabled hidden>==선택하세요==</option>
-                                <option value="YB">SecurityFirst NB</option>
+                                <option value="NB">SecurityFirst NB</option>
                                 <option value="YB">SecurityFirst YB</option>
                                 <option value="OB">SecurityFirst OB</option>
                                 <option value="SCH">순천향대 학생</option>
