--- a/src/main/resources/templates/mypage/profile.html
+++ b/src/main/resources/templates/mypage/profile.html
@@ -16,7 +16,7 @@
 
     <script th:src="@{/js/info/editUser.js}"></script>
 </head>
-<body>
+<body style="height: 100vh;">
 <div class="layout-nav">
     <nav th:replace="~{/nav :: nav}"></nav>
 </div>
