--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body>
+<body style="height: 100vh;">
 <!-- Navbar -->
 <div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
