--- a/src/main/resources/templates/rule.html
+++ b/src/main/resources/templates/rule.html
@@ -38,12 +38,12 @@
     </style>
 </head>
 
-<body>
+<body style="height: 100vh;">
 <!-- Navbar -->
 <div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
 </div>
-<div class="content">
+<div class="content" style="height: 93vh;">
     <div class="layout-center-title">
         <div class="center-title"th:replace="centerTitle :: div"></div>
     </div>
