--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -17,14 +17,14 @@
 
 
 </head>
-<body>
+<body style="height: 100vh;">
 <div class="layout-nav">
     <nav th:replace="~{/nav :: nav}"></nav>
 </div>
 <div class="layout-content-no-footer">
-    <div class="content-login container-fluid position-relative d-flex p-0" style="width: 1680px;">
+    <div class="content-login container-fluid position-relative d-flex p-0" >
         <div class="container-fluid">
-            <div class="row h-100 align-items-center justify-content-center" style="max-height: 867px;">
+            <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
 
                     <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
@@ -52,5 +52,13 @@
         <!-- Sign In End -->
     </div>
 </div>
+<script>
+    window.addEventListener('DOMContentLoaded', function() {
+        var error = location.search.includes('error');
+        if (error) {
+            alert('아이디 또는 비밀번호를 확인해주세요!');
+        }
+    });
+</script>
 </body>
 </html>
