--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -45,7 +45,7 @@
     </div>
         <div class="challenge  rounded px-4 py-0">
             <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
-            <div class="content-in-challenge"  >
+            <div class="content-in-challenge" style="margin-bottom : 5%;" >
                 <!-- REVERSING -->
                 <h3 style="font-size: 1.5em;" class="category-title">REVERSING</h3>
                 <div class="category-container">
@@ -118,7 +118,7 @@
 
 <!-- Popup window -->
 <div id="popup"
-     style="display:none;width:600px;height:60%;top:50%;left:50%;transform:translate(-50%, -50%);position:fixed;">
+     style="display:none;width:600px;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);position:fixed;">
 </div>
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
