--- a/src/main/resources/templates/admin/admin_quiz.html
+++ b/src/main/resources/templates/admin/admin_quiz.html
@@ -42,7 +42,7 @@
 <div class="container-fluid position-relative d-flex p-0">
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
-        <nav th:replace="~{/admin/layout/admin_side :: nav}"></nav>
+        <nav th:replace="admin/layout/admin_side :: nav"></nav>
     </div>
     <!-- Sidebar End -->
     <!-- Content Start -->
