--- a/src/main/resources/templates/admin/admin_quiz_create.html
+++ b/src/main/resources/templates/admin/admin_quiz_create.html
@@ -46,7 +46,7 @@
 <div class="container-fluid position-relative d-flex p-0">
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
-        <nav th:replace="~{/admin/layout/admin_side :: nav}"></nav>
+        <nav th:replace="~{admin/layout/admin_side :: nav}"></nav>
     </div>
     <div class="content">
         <nav th:replace="~{admin/layout/admin_nav :: nav}"></nav>
