--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -19,7 +19,7 @@
 </head>
 <body style="height: 100vh;">
 <div class="layout-nav">
-    <nav th:replace="~{/nav :: nav}"></nav>
+    <nav th:replace="nav :: nav"></nav>
 </div>
 <div class="layout-content-no-footer">
     <div class="content-login container-fluid position-relative d-flex p-0" >
