--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<!--
+
+    developped by 18김대한(dlxla4820)
+    developped by 18임효근(ChyoPyoRo)
+
+-->
+
 <head>
     <title>main</title>
     <!-- Icon Font Stylesheet -->
