--- a/src/main/resources/templates/mypage/solved.html
+++ b/src/main/resources/templates/mypage/solved.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="layout-nav">
-    <nav th:replace="~{/nav :: nav}"></nav>
+    <nav th:replace="nav :: nav"></nav>
 </div>
 <div class="layout-content-no-footer" style="height: 100%;">
     <div class="content-login container-fluid position-relative d-flex p-0">
