--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -61,7 +61,7 @@
         const millisecondsInOneDay = millisecondsInOneHour * 24;
         const text =  document.getElementById("text").innerText;
 
-        if (last <= 0) {
+        if (last == 0) {
             if(text=="시작까지 남은 시간"){
                 window.location.href="/";
             }
