description 수정 및 첨부파일 버튼 색 수정

--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -251,7 +251,8 @@
 
 
 .popupBoxContent.description  {
-    height : 250px;
+    word-wrap: break-word;
+    min-height : 250px;
     display: block;
     align-items: stretch;
     margin-bottom: 8px;
